# PILL

./: design.md  prd.md
archipelago/: index.html  package-lock.json  package.json
archipelago/src/: App.css  App.tsx
archipelago/src-tauri/: Cargo.toml  tauri.conf.json
archipelago/src-tauri/src/: hwnd_controller.rs  lib.rs  main.rs
archipelago/src/components/Island/: Island.css  Island.tsx
archipelago/src/components/states/: CompactState.tsx  ExpandedState.tsx  IdleState.tsx  SplitState.tsx
archipelago/src/hooks/: useIslandState.ts  useTauriEvent.ts
archipelago/src/store/: islandStore.ts
